--- a/layouts/default.html
+++ b/layouts/default.html
@@ -1,3 +1,13 @@
-<%= render 'head' %>
-<%= yield %>
-<%= render 'foot' %>
+<!DOCTYPE HTML>
+<html lang="en">
+  <%= render "head" %>
+  <body class="flex-col">
+    <%= render "sidebar_left" %>
+    <div class="page-wrapper flex-1 flex-col">
+      <%= render "navigation_menu" %>
+
+      <%= yield %>
+
+    </div>
+  </body>
+</html>
