--- a/layouts/head.html
+++ b/layouts/head.html
@@ -1,56 +1,18 @@
-<!DOCTYPE HTML>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>BookingSync Websites documentation</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="/highlight.css">
-    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-    <script src="/style.js"></script>
+<head>
+  <meta charset="utf-8">
+  <title>BookingSync Websites Documentation</title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,700' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="/highlight.css">
+  <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+  <script src="/style.js"></script>
 
-    <!-- you don't need to keep this, but it's cool for stats! -->
-    <meta name="generator" content="nanoc <%= Nanoc::VERSION %>">
-  </head>
-  <body class="flex-col">
-    <nav id="sidebar-left">
-      <ul class="nav">
-        <li><a href="#" class="sidebar-toggle"><i class="fa fa-close"></i></a></li>
-        <li class="<%= "active" if @item_rep.path.start_with?("/reference/") %>">
-          <a href="/reference/">Websites Reference</a>
-        </li>
-        <li><a href="https://www.bookingsync.com">BookingSync.com</a></li>
-      </ul>
-    </nav>
-    <div class="page-wrapper flex-1 flex-col">
-      <nav id="navigation" class="navbar navbar-default navbar-fixed-top" role="navigation">
-        <div class="container flex-row">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle sidebar-toggle visible-xs-block">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/">
-              <img alt="BookingSync" src="/images/bookingsync.svg">
-              <span>Developers</span>
-            </a>
-          </div>
-
-          <div class="flex-1 hidden-xs">
-            <ul class="nav navbar-nav navbar-right">
-              <li class="<%= "active" if @item_rep.path.start_with?("/reference/") %>">
-                <a href="/reference/">Websites Reference</a>
-              </li>
-              <li><a href="https://www.bookingsync.com">BookingSync.com</a></li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+  <!-- you don't need to keep this, but it's cool for stats! -->
+  <meta name="generator" content="nanoc <%= Nanoc::VERSION %>">
+</head>
