--- a/layouts/default.html
+++ b/layouts/default.html
@@ -5,9 +5,16 @@
     <%= render "sidebar_left" %>
     <div class="page-wrapper flex-1 flex-col">
       <%= render "navigation_menu" %>
-
-      <%= yield %>
-
+      <div class="container">
+        <div id="content">
+          <div class="row">
+            <%= render "reference" %>
+            <div class="col-md-9 col-md-pull-3">
+              <%= yield %>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
