Scope every page under /reference.
Change "Website Reference" link to "/reference" page.

--- a/layouts/reference.html
+++ b/layouts/reference.html
@@ -4,45 +4,45 @@
       <h3 class="panel-title">Basics</h3>
     </div>
     <div class="list-group">
-      <%= link_to_with_current("Introduction", "/",
+      <%= link_to_with_current("Introduction", "/reference/",
         class: "list-group-item") %>
     </div>
     <div class="panel-heading">
       <h3 class="panel-title">Filters</h3>
     </div>
     <div class="list-group">
-      <%= link_to_with_current("Introduction", "/filters/",
+      <%= link_to_with_current("Introduction", "/reference/filters/",
         class: "list-group-item") %>
-      <%= link_to_with_current("Array Filters", "/filters/array_filters/",
+      <%= link_to_with_current("Array Filters", "/reference/filters/array_filters/",
         class: "list-group-item") %>
-      <%= link_to_with_current("HTML Filters", "/filters/html_filters/",
+      <%= link_to_with_current("HTML Filters", "/reference/filters/html_filters/",
         class: "list-group-item") %>
-      <%= link_to_with_current("Markdown Filters", "/filters/markdown_filters/",
+      <%= link_to_with_current("Markdown Filters", "/reference/filters/markdown_filters/",
         class: "list-group-item") %>
-      <%= link_to_with_current("Math Filters", "/filters/math_filters/",
+      <%= link_to_with_current("Math Filters", "/reference/filters/math_filters/",
         class: "list-group-item") %>
-      <%= link_to_with_current("Money Filters", "/filters/money_filters/",
+      <%= link_to_with_current("Money Filters", "/reference/filters/money_filters/",
         class: "list-group-item") %>
-      <%= link_to_with_current("String Filters", "/filters/string_filters/",
+      <%= link_to_with_current("String Filters", "/reference/filters/string_filters/",
         class: "list-group-item") %>
-      <%= link_to_with_current("Text Filters", "/filters/text_filters/",
+      <%= link_to_with_current("Text Filters", "/reference/filters/text_filters/",
         class: "list-group-item") %>
-      <%= link_to_with_current("Additional Filters", "/filters/additional_filters/",
+      <%= link_to_with_current("Additional Filters", "/reference/filters/additional_filters/",
         class: "list-group-item") %>
     </div>
     <div class="panel-heading">
       <h3 class="panel-title">Tags</h3>
     </div>
     <div class="list-group">
-      <%= link_to_with_current("Introduction", "/tags/",
+      <%= link_to_with_current("Introduction", "/reference/tags/",
         class: "list-group-item") %>
-      <%= link_to_with_current("Control Flow Tags", "/tags/control_flow_tags/",
+      <%= link_to_with_current("Control Flow Tags", "/reference/tags/control_flow_tags/",
         class: "list-group-item") %>
-      <%= link_to_with_current("Iteration Tags", "/tags/iteration_tags/",
+      <%= link_to_with_current("Iteration Tags", "/reference/tags/iteration_tags/",
         class: "list-group-item") %>
-      <%= link_to_with_current("Theme Tags", "/tags/theme_tags/",
+      <%= link_to_with_current("Theme Tags", "/reference/tags/theme_tags/",
         class: "list-group-item") %>
-      <%= link_to_with_current("Variable Tags", "/tags/variable_tags/",
+      <%= link_to_with_current("Variable Tags", "/reference/tags/variable_tags/",
         class: "list-group-item") %>
     </div>
   </div>
