--- a/layouts/navigation_menu.html
+++ b/layouts/navigation_menu.html
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">
+      <a class="navbar-brand" href="/reference/">
         <img alt="BookingSync" src="/images/bookingsync.svg">
         <span class="flex-1">Websites Documentation</span>
       </a>
