Add documentation about Liquid Drops.

--- a/layouts/reference.html
+++ b/layouts/reference.html
@@ -8,6 +8,81 @@
         class: "list-group-item") %>
     </div>
     <div class="panel-heading">
+      <h3 class="panel-title">Drops</h3>
+    </div>
+    <div class="list-group">
+      <%= link_to_with_current("Introduction", "/reference/drops/",
+        class: "list-group-item") %>
+      <%= link_to_with_current("Base Drop", "/reference/drops/base_drop/",
+        class: "list-group-item") %>
+      <%= link_to_with_current("Categories Drop", "/reference/drops/categories_drop/",
+        class: "list-group-item") %>
+      <%= link_to_with_current("Category Drop", "/reference/drops/category_drop/",
+        class: "list-group-item") %>
+      <%= link_to_with_current("Contact Request Drop", "/reference/drops/contact_request_drop/",
+        class: "list-group-item") %>
+      <%= link_to_with_current("Context Drop", "/reference/drops/context_drop/",
+        class: "list-group-item") %>
+      <%= link_to_with_current("Current Page Drop", "/reference/drops/current_page_drop/",
+        class: "list-group-item") %>
+      <%= link_to_with_current("Destination Drop", "/reference/drops/destination_drop/",
+        class: "list-group-item") %>
+      <%= link_to_with_current("Form Error Drop", "/reference/drops/form_error_drop/",
+        class: "list-group-item") %>
+      <%= link_to_with_current("Guest Drop", "/reference/drops/guest_drop/",
+        class: "list-group-item") %>
+      <%= link_to_with_current("Locale Drop", "/reference/drops/locale_drop/",
+        class: "list-group-item") %>
+      <%= link_to_with_current("Locales Drop", "/reference/drops/locales_drop/",
+        class: "list-group-item") %>
+      <%= link_to_with_current("Location Drop", "/reference/drops/location_drop/",
+        class: "list-group-item") %>
+      <%= link_to_with_current("Menu Drop", "/reference/drops/menu_drop/",
+        class: "list-group-item") %>
+      <%= link_to_with_current("Menu Item Drop", "/reference/drops/menu_item_drop/",
+        class: "list-group-item") %>
+      <%= link_to_with_current("Menus Drop", "/reference/drops/menus_drop/",
+        class: "list-group-item") %>
+      <%= link_to_with_current("Page Drop", "/reference/drops/page_drop/",
+        class: "list-group-item") %>
+      <%= link_to_with_current("Page Locale Drop", "/reference/drops/page_locale_drop/",
+        class: "list-group-item") %>
+      <%= link_to_with_current("Page Locales Drop", "/reference/drops/page_locales_drop/",
+        class: "list-group-item") %>
+      <%= link_to_with_current("Rental Amenities Drop", "/reference/drops/rental_amenities_drop/",
+        class: "list-group-item") %>
+      <%= link_to_with_current("Rental Drop", "/reference/drops/rental_drop/",
+        class: "list-group-item") %>
+      <%= link_to_with_current("Rental Photo Drop", "/reference/drops/rental_photo_drop/",
+        class: "list-group-item") %>
+      <%= link_to_with_current("Rental Preview Drop", "/reference/drops/rental_preview_drop/",
+        class: "list-group-item") %>
+      <%= link_to_with_current("Rental Preview Drop", "/reference/drops/rental_special_offer_drop/",
+        class: "list-group-item") %>
+      <%= link_to_with_current("Rental Type Drop", "/reference/drops/rental_type_drop/",
+        class: "list-group-item") %>
+      <%= link_to_with_current("Rentals Drop", "/reference/drops/rentals_drop/",
+        class: "list-group-item") %>
+      <%= link_to_with_current("Rentals Tag Drop", "/reference/drops/rentals_tag_drop/",
+        class: "list-group-item") %>
+      <%= link_to_with_current("Review Drop", "/reference/drops/review_drop/",
+        class: "list-group-item") %>
+      <%= link_to_with_current("Search Drop", "/reference/drops/search_drop/",
+        class: "list-group-item") %>
+      <%= link_to_with_current("Search Form Drop", "/reference/drops/search_form_drop/",
+        class: "list-group-item") %>
+      <%= link_to_with_current("Site Drop", "/reference/drops/site_drop/",
+        class: "list-group-item") %>
+      <%= link_to_with_current("Social Drop", "/reference/drops/social_drop/",
+        class: "list-group-item") %>
+      <%= link_to_with_current("Time Drop", "/reference/drops/Time_drop/",
+        class: "list-group-item") %>
+      <%= link_to_with_current("Tweet Drop", "/reference/drops/tweet_drop/",
+        class: "list-group-item") %>
+      <%= link_to_with_current("Twitter Drop", "/reference/drops/twitter_drop/",
+        class: "list-group-item") %>
+    </div>
+    <div class="panel-heading">
       <h3 class="panel-title">Filters</h3>
     </div>
     <div class="list-group">
