--- a/layouts/navigation_menu.html
+++ b/layouts/navigation_menu.html
@@ -1,7 +1,7 @@
-<nav id="navigation" class="navbar navbar-default navbar-fixed-top" role="navigation">
-  <div class="container flex-row">
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+  <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle sidebar-toggle visible-xs-block">
+      <button type="button" class="navbar-toggle sidebar-toggle collapsed" data-toggle="collapse" data-target="#navigation" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -9,10 +9,10 @@
       </button>
       <a class="navbar-brand" href="/reference/">
         <img alt="BookingSync" src="/images/bookingsync.svg">
-        <span class="flex-1">Websites Documentation</span>
+        <span>Websites Documentation</span>
       </a>
     </div>
-    <div class="flex-1 hidden-xs">
+    <div class="collapse navbar-collapse" id="navigation">
       <ul class="nav navbar-nav navbar-right">
         <li class="<%= "active" if @item_rep.path.start_with?("/reference/") %>">
           <a href="/reference/">Websites Reference</a>
