Add missing Drops

--- a/layouts/reference.html
+++ b/layouts/reference.html
@@ -15,9 +15,21 @@
         class: "list-group-item") %>
       <%= link_to_with_current("Base Drop", "/reference/drops/base_drop/",
         class: "list-group-item") %>
+      <%= link_to_with_current("Bathroom Drop", "/reference/drops/bathroom_drop/",
+        class: "list-group-item") %>
+      <%= link_to_with_current("Bathroom Amenity Drop", "/reference/drops/bathroom_amenity_drop/",
+        class: "list-group-item") %>
+      <%= link_to_with_current("Bed Kind Drop", "/reference/drops/bed_kind_drop/",
+        class: "list-group-item") %>
+      <%= link_to_with_current("Bedroom Drop", "/reference/drops/bedroom_drop/",
+        class: "list-group-item") %>
       <%= link_to_with_current("Categories Drop", "/reference/drops/categories_drop/",
         class: "list-group-item") %>
       <%= link_to_with_current("Category Drop", "/reference/drops/category_drop/",
+        class: "list-group-item") %>
+      <%= link_to_with_current("Category Locale Drop", "/reference/drops/category_locale_drop/",
+        class: "list-group-item") %>
+      <%= link_to_with_current("Category Locales Drop", "/reference/drops/category_locales_drop/",
         class: "list-group-item") %>
       <%= link_to_with_current("Contact Request Drop", "/reference/drops/contact_request_drop/",
         class: "list-group-item") %>
@@ -26,6 +38,10 @@
       <%= link_to_with_current("Current Page Drop", "/reference/drops/current_page_drop/",
         class: "list-group-item") %>
       <%= link_to_with_current("Destination Drop", "/reference/drops/destination_drop/",
+        class: "list-group-item") %>
+      <%= link_to_with_current("Destination Locale Drop", "/reference/drops/destination_locale_drop/",
+        class: "list-group-item") %>
+      <%= link_to_with_current("Destination Locales Drop", "/reference/drops/destination_locales_drop/",
         class: "list-group-item") %>
       <%= link_to_with_current("Form Error Drop", "/reference/drops/form_error_drop/",
         class: "list-group-item") %>
