# This is a combination of 7 commits. # The first commit's message is: Add missing Drops
Add missing Drops attributes

fix

fix

Rename drops to object, as this naming is an internal details

# This is the 2nd commit message:

Add rake to gems

# This is the 3rd commit message:

Update jQuery + FontAwesome

# This is the 4th commit message:

Add Template Category

# This is the 5th commit message:

Add Templates introduction

Fix typo

# This is the 6th commit message:

Add scroll to top button

fix

# This is the 7th commit message:

Update snippet import example

--- a/content/assets/stylesheets/_base.scss
+++ b/content/assets/stylesheets/_base.scss
@@ -13,3 +13,11 @@
 .reference-body h3+h4 {
   margin-top: 1em;
 }
+
+.scroll {
+  position: fixed;
+  bottom: 50px;
+  right: 50px;
+  background: #218AC9;
+  color: #fff;
+}
