--- a/layouts/default.html
+++ b/layouts/default.html
@@ -17,5 +17,6 @@
         </div>
       </div>
     </div>
+    <a href="#" class="btn btn-secondary scroll"><i class="fa fa-chevron-up"></i></a>
   </body>
 </html>
