--- a/layouts/reference.html
+++ b/layouts/reference.html
@@ -87,9 +87,16 @@
         class: "list-group-item") %>
     </div>
     <div class="panel-heading">
-      <h3 class="panel-title">Filters</h3>
+      <h3 class="panel-title">Templates</h3>
     </div>
     <div class="list-group">
+      <%= link_to_with_current("Introduction", "/reference/templates/",
+        class: "list-group-item") %>
+    </div>
+    <div class="panel-heading">
+      <h3 class="panel-title">Filters</h3>
+    </div>
+    <div class="list-group" id="filters">
       <%= link_to_with_current("Introduction", "/reference/filters/",
         class: "list-group-item") %>
       <%= link_to_with_current("Array Filters", "/reference/filters/array_filters/",
