--- a/layouts/reference.html
+++ b/layouts/reference.html
@@ -90,7 +90,9 @@
       <h3 class="panel-title">Templates</h3>
     </div>
     <div class="list-group">
-      <%= link_to_with_current("Introduction", "/reference/templates/",
+      <%= link_to_with_current("Introduction", "/reference/templates/introduction",
+        class: "list-group-item") %>
+      <%= link_to_with_current("index.liquid", "/reference/templates/index",
         class: "list-group-item") %>
     </div>
     <div class="panel-heading">
