Add missing drops

--- a/layouts/reference.html
+++ b/layouts/reference.html
@@ -19,9 +19,21 @@
         class: "list-group-item") %>
       <%= link_to_with_current("Base", "/reference/objects/base/",
         class: "list-group-item") %>
+      <%= link_to_with_current("Bathroom", "/reference/objects/bathroom/",
+        class: "list-group-item") %>
+      <%= link_to_with_current("Bathroom Amenity", "/reference/objects/bathroom_amenity/",
+        class: "list-group-item") %>
+      <%= link_to_with_current("Bed Kind", "/reference/objects/bed_kind/",
+        class: "list-group-item") %>
+      <%= link_to_with_current("Bedroom", "/reference/objects/bedroom/",
+        class: "list-group-item") %>
       <%= link_to_with_current("Categories", "/reference/objects/categories/",
         class: "list-group-item") %>
       <%= link_to_with_current("Category", "/reference/objects/category/",
+        class: "list-group-item") %>
+      <%= link_to_with_current("Category Locale", "/reference/objects/category_locale/",
+        class: "list-group-item") %>
+      <%= link_to_with_current("Category Locales", "/reference/objects/category_locales/",
         class: "list-group-item") %>
       <%= link_to_with_current("Contact Request", "/reference/objects/contact_request/",
         class: "list-group-item") %>
@@ -30,6 +42,10 @@
       <%= link_to_with_current("Current Page", "/reference/objects/current_page/",
         class: "list-group-item") %>
       <%= link_to_with_current("Destination", "/reference/objects/destination/",
+        class: "list-group-item") %>
+      <%= link_to_with_current("Destination Locale", "/reference/objects/destination_locale/",
+        class: "list-group-item") %>
+      <%= link_to_with_current("Destination Locales", "/reference/objects/destination_locales/",
         class: "list-group-item") %>
       <%= link_to_with_current("Form Error", "/reference/objects/form_error/",
         class: "list-group-item") %>
@@ -78,6 +94,8 @@
       <%= link_to_with_current("Site", "/reference/objects/site/",
         class: "list-group-item") %>
       <%= link_to_with_current("Social", "/reference/objects/social/",
+        class: "list-group-item") %>
+      <%= link_to_with_current("Sort", "/reference/objects/sort/",
         class: "list-group-item") %>
       <%= link_to_with_current("Time", "/reference/objects/time/",
         class: "list-group-item") %>
