Add 404.liquid template

--- a/layouts/reference.html
+++ b/layouts/reference.html
@@ -114,6 +114,8 @@
         class: "list-group-item") %>
       <%= link_to_with_current("page.liquid", "/reference/templates/page",
         class: "list-group-item") %>
+      <%= link_to_with_current("404.liquid", "/reference/templates/404",
+        class: "list-group-item") %>
     </div>
     <div class="panel-heading">
       <h3 class="panel-title">Filters</h3>
