Add page.liquid template

--- a/layouts/reference.html
+++ b/layouts/reference.html
@@ -112,6 +112,8 @@
         class: "list-group-item") %>
       <%= link_to_with_current("index.liquid", "/reference/templates/index",
         class: "list-group-item") %>
+      <%= link_to_with_current("page.liquid", "/reference/templates/page",
+        class: "list-group-item") %>
     </div>
     <div class="panel-heading">
       <h3 class="panel-title">Filters</h3>
