--- a/layouts/reference.html
+++ b/layouts/reference.html
@@ -114,6 +114,8 @@
         class: "list-group-item") %>
       <%= link_to_with_current("page.liquid", "/reference/templates/page",
         class: "list-group-item") %>
+      <%= link_to_with_current("rental.liquid", "/reference/templates/rental",
+        class: "list-group-item") %>
       <%= link_to_with_current("404.liquid", "/reference/templates/404",
         class: "list-group-item") %>
     </div>
