Add Search Template

--- a/layouts/reference.html
+++ b/layouts/reference.html
@@ -116,6 +116,8 @@
         class: "list-group-item") %>
       <%= link_to_with_current("rental.liquid", "/reference/templates/rental",
         class: "list-group-item") %>
+      <%= link_to_with_current("search.liquid", "/reference/templates/search",
+        class: "list-group-item") %>
       <%= link_to_with_current("404.liquid", "/reference/templates/404",
         class: "list-group-item") %>
     </div>
