--- a/reference/templates/introduction/index.html
+++ b/reference/templates/introduction/index.html
@@ -110,6 +110,10 @@
     <div class="list-group">
       <a class="list-group-item" href="/reference/templates/introduction">Introduction</a>
       <a class="list-group-item" href="/reference/templates/index">index.liquid</a>
+      <a class="list-group-item" href="/reference/templates/page">page.liquid</a>
+      <a class="list-group-item" href="/reference/templates/rental">rental.liquid</a>
+      <a class="list-group-item" href="/reference/templates/search">search.liquid</a>
+      <a class="list-group-item" href="/reference/templates/404">404.liquid</a>
     </div>
     <div class="panel-heading">
       <h3 class="panel-title">Filters</h3>
@@ -193,15 +197,15 @@
 <p>The <code>templates</code> directory contains all other Liquid templates:</p>
 
 <ul>
-  <li><code>404.liquid</code></li>
+  <li><a href="/reference/templates/404">404.liquid</a></li>
   <li><code>category.liquid</code></li>
   <li><code>contact.liquid</code></li>
   <li><code>destination.liquid</code></li>
-  <li><code>index.liquid</code></li>
+  <li><a href="/reference/templates/index">index.liquid</a></li>
   <li><code>info_window.liquid</code></li>
-  <li><code>page.liquid</code></li>
-  <li><code>rental.liquid</code></li>
-  <li><code>search.liquid</code></li>
+  <li><a href="/reference/templates/page">page.liquid</a></li>
+  <li><a href="/reference/templates/rental">rental.liquid</a></li>
+  <li><a href="/reference/templates/search">search.liquid</a></li>
 </ul>
 
 <h3 id="debug-mode">Debug mode</h3>
