--- a/reference/templates/search/index.html
+++ b/reference/templates/search/index.html
@@ -60,7 +60,7 @@
       <a class="list-group-item" href="/reference/objects/">Introduction</a>
       <a class="list-group-item" href="/reference/objects/amenity/">Amenity</a>
       <a class="list-group-item" href="/reference/objects/availability/">Availability</a>
-      <a class="list-group-item active" href="/reference/objects/base/">Base</a>
+      <a class="list-group-item" href="/reference/objects/base/">Base</a>
       <a class="list-group-item" href="/reference/objects/bathroom/">Bathroom</a>
       <a class="list-group-item" href="/reference/objects/bathroom_amenity/">Bathroom Amenity</a>
       <a class="list-group-item" href="/reference/objects/bed_kind/">Bed Kind</a>
@@ -145,26 +145,81 @@
           <div class="col-md-9 col-md-pull-3">
             <div class="panel panel-default">
               <div class="panel-body reference-body">
-                <h2 id="base">Base</h2>
+                <h2 id="searchliquid">search.liquid</h2>
 
-<p>Generates urls and paths to default sections of the website.</p>
+<p>The <code>search.liquid</code> template is used to display the results of a rentals search request.</p>
 
-<h5 id="example">Example</h5>
+<h3 id="parameters">Parameters</h3>
 
-<pre><code class="language-liquid">  &lt;a href="<span class="p">{{</span><span class="w"> </span><span class="nv">site</span><span class="p">.</span><span class="nv">contact_url</span><span class="w"> </span><span class="p">}}</span>" class="btn btn-info"&gt;<span class="p">{%</span><span class="w"> </span><span class="nt">t</span><span class="w"> </span><span class="s1">'footer.contact.message'</span><span class="w"> </span><span class="p">%}</span>&lt;/a&gt;</code></pre>
+<table class="table table-bordered">
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Type</th>
+      <th>Description</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>checkin</td>
+      <td>Date (ISO 8601)</td>
+      <td>Checkin date</td>
+    </tr>
+    <tr>
+      <td>checkout</td>
+      <td>Date (ISO 8601)</td>
+      <td>Checkout date</td>
+    </tr>
+    <tr>
+      <td>debug</td>
+      <td>Boolean</td>
+      <td>
+<a href="introduction/index.html">Debug mode</a>. Default = 0</td>
+    </tr>
+    <tr>
+      <td>display</td>
+      <td>String</td>
+      <td>Display type</td>
+    </tr>
+    <tr>
+      <td>guests</td>
+      <td>Integer</td>
+      <td>Adults number</td>
+    </tr>
+    <tr>
+      <td>max_price</td>
+      <td>Integer</td>
+      <td>Maximum price</td>
+    </tr>
+    <tr>
+      <td>min_price</td>
+      <td>Integer</td>
+      <td>Minimum price</td>
+    </tr>
+    <tr>
+      <td>rental_type[]</td>
+      <td>Array</td>
+      <td>Array of rental types</td>
+    </tr>
+    <tr>
+      <td>sort_by</td>
+      <td>String</td>
+      <td>Sort by …</td>
+    </tr>
+  </tbody>
+</table>
 
-<p>Available paths:</p>
+<h3 id="amenities">Amenities</h3>
 
-<ul>
-  <li>category</li>
-  <li>contact</li>
-  <li>home</li>
-  <li>page</li>
-  <li>rental</li>
-  <li>search</li>
-</ul>
+<p>If you want to filter your results by amenities you can add amenity’s key as a boolean parameter.</p>
 
-<p>Works with suffixes: <code>path</code> and <code>url</code>.</p>
+<p>e.g: <code>air_conditioning=1</code></p>
+
+<p>List of amenities key:</p>
+
+<pre><code class="language-liquid">  <span class="p">{%</span><span class="w"> </span><span class="nt">for</span><span class="w"> </span>amenity<span class="w"> </span>in<span class="w"> </span>SearchForm.amenities<span class="w"> </span><span class="p">%}</span>
+    <span class="p">{{</span><span class="w"> </span><span class="nv">amenity</span><span class="p">.</span><span class="nv">id</span><span class="w"> </span><span class="p">}}</span>
+  <span class="p">{%</span><span class="w"> </span><span class="nt">endfor</span><span class="w"> </span><span class="p">%}</span></code></pre>
 
               </div>
             </div>
