--- a/layouts/reference.html
+++ b/layouts/reference.html
@@ -39,6 +39,10 @@
         class: "list-group-item") %>
       <%= link_to_with_current("Context", "/reference/objects/context/",
         class: "list-group-item") %>
+      <%= link_to_with_current("Currencies", "/reference/objects/currencies/",
+        class: "list-group-item") %>
+      <%= link_to_with_current("Currency", "/reference/objects/currency/",
+        class: "list-group-item") %>
       <%= link_to_with_current("Current Page", "/reference/objects/current_page/",
         class: "list-group-item") %>
       <%= link_to_with_current("Destination", "/reference/objects/destination/",
@@ -50,6 +54,8 @@
       <%= link_to_with_current("Form Error", "/reference/objects/form_error/",
         class: "list-group-item") %>
       <%= link_to_with_current("Guest", "/reference/objects/guest/",
+        class: "list-group-item") %>
+      <%= link_to_with_current("Living Room", "/reference/objects/living_room/",
         class: "list-group-item") %>
       <%= link_to_with_current("Locale", "/reference/objects/locale/",
         class: "list-group-item") %>
@@ -68,6 +74,8 @@
       <%= link_to_with_current("Page Locale", "/reference/objects/page_locale/",
         class: "list-group-item") %>
       <%= link_to_with_current("Page Locales", "/reference/objects/page_locales/",
+        class: "list-group-item") %>
+      <%= link_to_with_current("Rate", "/reference/objects/rate/",
         class: "list-group-item") %>
       <%= link_to_with_current("Rental", "/reference/objects/rental/",
         class: "list-group-item") %>
